<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="641dp"
    android:id="@+id/register_layout"
    android:background="@drawable/background_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linear_register"
                android:layout_width="190dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_register"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:layout_marginLeft="17dp"
                    android:text="@string/devam_etmek_icin"
                    android:textSize="10sp"
                    android:fontFamily="@font/poppins_regular"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_register"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_close_square"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_register1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kayit_ol"
            android:textColor="#E76B12"
            android:fontFamily="@font/poppins_regular"
            android:textSize="33dp"
            android:layout_marginLeft="17dp"/>

        <LinearLayout
            android:id="@+id/linear_register1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="-20dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kullanici_adi_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#666666"
                    android:hint="@string/kullanici_adi"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_register1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#666666"
                    android:inputType="textPersonName"
                    android:hint="@string/e_mail_adresi"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_register2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#666666"
                    android:inputType="textPassword"
                    android:hint="@string/sifre"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="42dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button2"
            android:gravity="center">

            <TextView
                android:id="@+id/register_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/kayit_ol"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/register_button_image"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/register_button_text"
                android:src="@drawable/ic_send" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:weightSum="12">

            <View
                android:id="@+id/view_register"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="5"
                android:background="#EAEAEA" />

            <TextView
                android:id="@+id/text_register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ya_da"
                android:fontFamily="@font/poppins_regular"
                android:textAlignment="center"
                android:textColor="#757575"
                android:textSize="10sp" />

            <View
                android:id="@+id/view_register1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="5"
                android:background="#EAEAEA" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_register3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_facebook"/>

            <ImageView
                android:id="@+id/image_register_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="54dp"
                android:background="@drawable/ic_google"/>
            <ImageView
                android:id="@+id/image_register_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="54dp"
                android:background="@drawable/ic_linkedin"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_register4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_register3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#666666"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/bir_hesabin_var_mi"/>

            <TextView
                android:id="@+id/text_register4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="#2485E8"
                android:text="@string/giris_yap"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>